# mentioned

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
monitoring/: Dockerfile  README.md  prometheus.yml.template
src/mentioned/: __init__.py  app.py  app_ray.py  data.py  inference.py  model.py  train.py
tests/: test_data.py  test_inference.py  test_lightning_model.py  test_model.py
